Bug 325234 - Brush animations are broken for "brush outline"
Summary: Brush animations are broken for "brush outline"
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: unspecified Linux
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-24 10:44 UTC by Bollebib
Modified: 2013-09-24 15:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bollebib 2013-09-24 10:44:36 UTC
rotation and size animations for the Brush outline seem broken recently.


rotation: drawing angle,or rotation:fuzzy
or size=pressure gives the clearest examples where it doesn't work

That makes it harder to predict how to make your strokes.
Comment 1 Bollebib 2013-09-24 10:45:21 UTC
for Curosor shapes,ofcourse,I didn't mention that
Comment 2 Halla Rempt 2013-09-24 15:11:06 UTC
Git commit 2f9960809839dd7e74ffded59a78709bb6e78cfc by Boudewijn Rempt.
Committed on 24/09/2013 at 15:09.
Pushed by rempt into branch 'master'.

Fix outline cursor

The outline cursor now listens to rotation and size again, plus there's
an option to show a small dot in the middle of the outline.
Related: bug 325235

M  +2    -1    krita/image/kis_global.h
M  +6    -0    krita/ui/dialogs/kis_dlg_preferences.cc
M  +1    -27   krita/ui/forms/wdggeneralsettings.ui
M  +16   -5    krita/ui/tool/kis_tool.cc
M  +24   -51   krita/ui/tool/kis_tool_freehand.cc
M  +3    -3    krita/ui/tool/kis_tool_freehand.h
M  +3    -6    krita/ui/tool/kis_tool_paint.cc
M  +2    -1    krita/ui/tool/kis_tool_paint.h

http://commits.kde.org/calligra/2f9960809839dd7e74ffded59a78709bb6e78cfc