Fix outline cursor

The outline cursor now listens to rotation and size again, plus there's
an option to show a small dot in the middle of the outline.

BUG:325234
BUG:325235