krita/ui/tool/kis_tool_paint.cc
@@ -402,10 +402,7 @@ void KisToolPaint::resetCursorStyle()
     if (cfg.cursorStyle() == CURSOR_STYLE_OUTLINE) {
         if (m_supportOutline) {
             // do not show cursor, tool will paint outline
-            useCursor(KisCursor::blankCursor());
-        } else {
-            // if the tool does not support outline, use tool icon cursor
-            useCursor(cursor());
+                useCursor(KisCursor::blankCursor());
         }
     }
 }
@@ -525,7 +522,7 @@ void KisToolPaint::requestUpdateOutline(const QPointF &outlineDocPoint)
     outlineMode = KisPaintOpSettings::CursorIsNotOutline;
 
     if (mode() == KisTool::GESTURE_MODE ||
-        (cfg.cursorStyle() == CURSOR_STYLE_OUTLINE &&
+        ((cfg.cursorStyle() == CURSOR_STYLE_OUTLINE || cfg.cursorStyle() == CURSOR_STYLE_OUTLINE_CENTER_DOT )&&
          ((mode() == HOVER_MODE && !specialHoverModeActive()) ||
           (mode() == PAINT_MODE && cfg.showOutlineWhilePainting())))) {
 
@@ -560,7 +557,7 @@ void KisToolPaint::requestUpdateOutline(const QPointF &outlineDocPoint)
 }
 
 QPainterPath KisToolPaint::getOutlinePath(const QPointF &documentPos,
-                                             KisPaintOpSettings::OutlineMode outlineMode)
+                                          KisPaintOpSettings::OutlineMode outlineMode)
 {
     qreal scale = 1.0;
     qreal rotation = 0;
